--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mariadb://${MYSQL_HOST:localhost}:3306/medicare
-spring.datasource.username=root
-spring.datasource.password=welcome
+spring.datasource.url=jdbc:mariadb://${DB_HOST:localhost}:3306/${DB_DATABASE:medicare}
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASSWORD:welcome}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #spring.jpa.show-sql: true
+
+logging.level.root=${LOGGING_ROOT:WARN}
+logging.level.org.springframework.web=${LOGGING_SPRING:DEBUG}
+logging.level.org.hibernate=${LOGGING_HB:ERROR}
