Add mariadb host to service

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,8 @@ jobs:
 
       - name: Execute Gradle build
         run: ./gradlew build
+        env:
+          DB_HOST: mariadb
 
       - name: Archive Build Artifacts
         uses: actions/upload-artifact@v3
