--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,9 +56,7 @@ jobs:
       - name: Build, tag, and push the image to ECR
         id: build-image
         env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ secrets.REPO_NAME }}
-          IMAGE_TAG: ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}/medicare:latest
+          IMAGE_TAG: ${{  steps.login-ecr.outputs.registry  }}/${{ secrets.REPO_NAME }}/medicare:latest
         run: |
           echo "Building docker container"
           docker build -t $IMAGE_TAG .
