--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,3 +68,23 @@ jobs:
           echo "Pushing image to ECR"
           docker push $IMAGE_TAG
           echo "::set-output name=$IMAGE_TAG"
+
+  deploy_to_ec2:
+    name: Deploy Changes to EC2
+    runs-on: ubuntu-latest
+    needs: build_docker_image
+
+    steps:
+      - name: Deploy
+        env:
+          PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          HOST: ${{ secrets.EC2_ADDRESS }}
+          USER: ${{ secrets.EC2_USER }}
+        run: |
+          echo "$PRIVATE_KEY" > key.pem && chmod 400 key.pem
+          ssh -o StrictHostKeyChecking=no -i key.pem ${USER}@${HOST} '
+          # Access to EC2 granted, now we deploy
+          cd /opt/medicare/ &&
+          docker compose pull &&
+          docker compose up --force-recreate
+          '
