--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,12 +61,14 @@ jobs:
       - name: Build, tag, and push the image to ECR
         id: build-image
         env:
+          COMMIT_TAG: ${{ secrets.REPO_NAME }}/medicare:${{ github.sha }}
           IMAGE_TAG: ${{  secrets.REPO_NAME }}/medicare:latest
         run: |
           echo "Building docker container"
-          docker build -t $IMAGE_TAG .
+          docker build -t $IMAGE_TAG -t $COMMIT_TAG .
           echo "Pushing image to ECR"
           docker push $IMAGE_TAG
+          docker push $COMMIT_TAG
           echo "::set-output name=$IMAGE_TAG"
 
   deploy_to_ec2:
