--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,10 +58,14 @@ jobs:
           name: build-output
           path: build/libs/
 
+      - name: Get Short SHA
+        id: short_sha
+        run: echo "::set-output name=short_sha::$(git rev-parse --short HEAD)"
+
       - name: Build, tag, and push the image to ECR
         id: build-image
         env:
-          COMMIT_TAG: ${{ secrets.REPO_NAME }}/medicare:${{ github.sha }}
+          COMMIT_TAG: ${{ secrets.REPO_NAME }}/medicare:${{ steps.short_sha.outputs.short_sha }}"
           IMAGE_TAG: ${{  secrets.REPO_NAME }}/medicare:latest
         run: |
           echo "Building docker container"
